Added more tests for Hunted Wumpus.